<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">

            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home"
                android:title="@string/itemHome" />
            <item
                android:id="@+id/nav_myplans"
                android:icon="@drawable/ic_favorite"
                android:title="@string/itemMyPlans" />


    </group>


    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">


            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info"
                android:title="@string/itemAbout" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/itemSettings" />
            <item
                android:id="@+id/nav_logout"
                android:title="@string/itemLogout"
                android:icon="@drawable/ic_exit_to_app"/>

    </group>


</menu>
