<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bghome">

    <include layout="@layout/app_bar" android:id="@+id/app_bar"/>

    <Button
        android:id="@+id/btn360"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/btn360" />

    <Button
        android:id="@+id/btnVr"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/btnVr"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/btn360"
        android:layout_alignLeft="@+id/btn360"
        android:layout_alignStart="@+id/btn360" />

    <Button
        android:id="@+id/btnGoToPlan"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/btnGoToPlan" />


</RelativeLayout>