<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutFinalPlan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.uclk.shani.youseelk.activities.FinalPlanActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/contentFrameFinalPlan">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/app_bar" android:id="@+id/app_bar"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:weightSum="2">

                <Button
                    android:id="@+id/btnWeather"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_wb_sunny"
                    android:drawableTint="#FFFFFF"
                    android:drawablePadding="5dp"
                    android:layout_weight="1"
                    android:text="@string/btnWeather" />

                <Button
                    android:id="@+id/btnShowMap"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_map"
                    android:drawableTint="#FFFFFF"
                    android:drawablePadding="5dp"
                    android:layout_weight="1"
                    android:text="@string/btnShowMap" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:weightSum="4">

                <TextView
                    android:id="@+id/tvDestination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvDestination"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_weight="2"/>

                <TextView
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvDistance"
                    android:text="@string/tvDistance"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTime"
                    android:text="@string/tvTime"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_weight="1"/>

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tourPlan"
                android:layout_margin="10dp">
            </android.support.v7.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:weightSum="2"
                android:gravity="bottom">

                <Button
                    android:id="@+id/btnEdit"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnEdit"
                    android:drawableLeft="@drawable/ic_edit"
                    android:drawableTint="#FFFFFF"
                    android:drawablePadding="5dp"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/btnSave"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnSave"
                    android:drawableLeft="@drawable/ic_save_black_24dp"
                    android:drawableTint="#FFFFFF"
                    android:drawablePadding="5dp"
                    android:layout_weight="1"/>

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/navView"
        app:itemIconTint="@color/colorAccent"
        app:headerLayout="@layout/nav_header_nav_drawer"
        app:menu="@menu/activity_nav_drawer_drawer"/>

</android.support.v4.widget.DrawerLayout>
