<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.uclk.shani.youseelk.Activities.MainActivity"
    android:background="@drawable/bghome">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_weight="0.20"
            app:srcCompat="@drawable/logo" />


        <EditText
            android:id="@+id/etEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:backgroundTint="@color/colorAccent"
            android:ems="10"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            android:textColor="#FFFFFF"
            android:textColorHint="@android:color/holo_orange_light"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="18dp"
            android:backgroundTint="@color/colorAccent"
            android:ems="10"
            android:fontFamily="@string/passwordHint"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="@android:color/holo_orange_light"
            android:textSize="18sp" />


        <Button
            android:id="@+id/btnLogIn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@color/colorAccent"
            android:elevation="5dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/btnlogin"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnSignUp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="7dp"
            android:elevation="5dp"
            android:text="@string/btnsignup"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />


    </LinearLayout>
</RelativeLayout>
