<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutHome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundhome"
    tools:context="com.uclk.shani.youseelk.Activities.HomeActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/contentFrame">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/app_bar_nav_drawer" android:id="@+id/app_bar"/>

    <ImageView
        android:id="@+id/logoHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo"
        android:padding="10dp"
        tools:layout_editor_absoluteY="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvGoSee1"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:layout_alignBottom="@+id/logoHome"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:text="@string/tvGoSee2"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnView"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/btnHome1"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="363dp"
        android:layout_above="@+id/btnPlan"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="7dp" />

    <Button
        android:id="@+id/btnPlan"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/btnHome2"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="420dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/btnView"
        android:layout_alignStart="@+id/btnView"
        android:layout_marginBottom="49dp" />

    </RelativeLayout>

    </FrameLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/navView"
        app:itemIconTint="@color/colorAccent"
        app:headerLayout="@layout/nav_header_nav_drawer"
        app:menu="@menu/activity_nav_drawer_drawer"/>

</android.support.v4.widget.DrawerLayout>
